remove host dependency

--- a/packages/ferry_flutter/pubspec.yaml
+++ b/packages/ferry_flutter/pubspec.yaml
@@ -10,7 +10,11 @@ topics:
   - gql
   - ferry
 dependencies:
-  ferry: ^0.16.0-dev.3
+  ferry:
+    git:
+      url: https://github.com/resfandiari/ferry.git
+      path: packages/ferry
+      ref: master
   gql_exec: '>=0.4.0 <2.0.0'
   ferry_exec: ^0.6.1-dev.1
   flutter:
