--- a/packages/ferry/pubspec.yaml
+++ b/packages/ferry/pubspec.yaml
@@ -21,7 +21,11 @@ dependencies:
   built_value: ^8.0.4
   ferry_exec: ^0.6.1-dev.1
   normalize: ^0.9.1
-  ferry_cache: ^0.9.0-dev.2
+  ferry_cache:
+    git:
+      url: https://github.com/resfandiari/ferry.git
+      path: packages/ferry_cache
+      ref: master
 dev_dependencies:
   test: ^1.16.8
   mockito: ^5.3.1
