--- a/packages/ferry_cache/pubspec.yaml
+++ b/packages/ferry_cache/pubspec.yaml
@@ -14,7 +14,11 @@ dependencies:
   meta: ^1.3.0
   rxdart: ^0.28.0
   normalize: ^0.9.1
-  ferry_store: ^0.6.0-dev.0
+  ferry_store:
+    git:
+      url: https://github.com/resfandiari/ferry.git
+      path: packages/ferry_store
+      ref: master
   collection: ^1.15.0
   pedantic: ^1.11.0
 dev_dependencies:
